--- a/app/static/index.html
+++ b/app/static/index.html
@@ -5,64 +5,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Currently Playing</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-        }
-
-        .track-info {
-            margin: 20px;
-        }
-
-        .hidden {
-            display: none;
-        }
-
-        button {
-            padding: 10px 20px;
-            font-size: 16px;
-            margin: 5px;
-        }
-
-        img {
-            max-width: 300px;
-            margin: 20px 0;
-        }
-
-        .notification {
-            position: fixed;
-            top: 20px;
-            right: 20px;
-            background-color: #333;
-            color: #fff;
-            padding: 10px;
-            border-radius: 5px;
-            opacity: 0;
-            transition: opacity 0.5s ease-in-out;
-        }
-
-        .notification.show {
-            opacity: 1;
-        }
-    </style>
+    <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
-    <div class="track-info">
+    <div class="container">
         <h2>Currently Playing</h2>
         <img id="album-image" src="" alt="Album cover" class="hidden">
-        <p id="track-name">Name: </p>
-        <p id="track-artist">Artist: </p>
-        <p id="track-album">Album: </p>
-        <p id="track-genre">Genre: </p>
-        <p id="track-bpm">BPM: </p>
-        <p id="track-key">Key: </p>
-        <p id="track-mode">Mode: </p>
-        <div id="genre-buttons"></div>
+        <div class="track-info">
+            <p id="track-name">Name: </p>
+            <p id="track-artist">Artist: </p>
+            <p id="track-album">Album: </p>
+            <p id="track-genre">Genre: </p>
+            <p id="track-bpm">BPM: </p>
+            <p id="track-key">Key: </p>
+            <p id="track-mode">Mode: </p>
+            <div id="genre-buttons"></div>
+        </div>
         <button id="login-button" class="hidden" onclick="window.location.href='/login'">Login to Spotify</button>
     </div>
     <div id="notification" class="notification"></div>
-    <!-- <p id="lexicon-status">Lexicon API Status: Not Checked</p> -->
 
     <script>
         async function fetchCurrentlyPlaying() {
@@ -124,14 +86,7 @@
             }, 3000); // Hide after 3 seconds
         }
 
-        /*async function checkLexiconStatus() {
-            const response = await fetch('/lexicon-status');
-            const data = await response.json();
-            document.getElementById('lexicon-status').innerText = `Lexicon API Status: ${data.lexicon_status ? 'Connected' : 'Not Connected'}`;
-        }*/
-
         fetchCurrentlyPlaying();
-        // checkLexiconStatus();
         setInterval(fetchCurrentlyPlaying, 5000); // Update every 5 seconds
     </script>
 </body>
